Arreglos, funciona todo lo de visitante,empresa y postulante dentro de esas carpetas

--- a/Tarea2/Servidor-Web/src/main/webapp/index.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/index.html
@@ -82,24 +82,38 @@
                 <tbody>
                   <tr>
                     <td class="d-flex">
-                      <a class="btn" href="./recourse/menu/consultaUsuario.html"
+                      <a
+                        class="btn"
+                        href="./recourse/menu/Visitante/consultaUsuario.html"
                         >Consulta usuarios</a
                       >
                     </td>
                   </tr>
                   <tr>
                     <td class="d-flex">
-                      <a class="btn" href="">Ver tipos de publicaciones</a>
+                      <a
+                        class="btn"
+                        href="./recourse/menu/Visitante/consultaDeTipoDePublicacionDeOfertaLaboral.html"
+                        >Ver tipos de publicaciones</a
+                      >
                     </td>
                   </tr>
                   <tr>
                     <td class="d-flex">
-                      <a class="btn" href="">Ver tipos de paquetes</a>
+                      <a
+                        class="btn"
+                        href="./recourse/menu/Visitante/consultaDePaqueteDeTiposDePublicacionDeOfertaLaboral.html"
+                        >Ver tipos de paquetes</a
+                      >
                     </td>
                   </tr>
                   <tr>
                     <td class="d-flex">
-                      <a class="btn" href="">Consulta ofertas laborales</a>
+                      <a
+                        class="btn"
+                        href="./recourse/menu/Visitante/consultaOferta.html"
+                        >Consulta ofertas laborales</a
+                      >
                     </td>
                   </tr>
                 </tbody>
