--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Empresa/consultaDeTipoDePublicacionDeOfertaLaboral.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Empresa/consultaDeTipoDePublicacionDeOfertaLaboral.html
@@ -14,38 +14,50 @@
   
   <body>
     <nav class="navbar navbar-expand-lg">
-      <div class="container">
-        <div class="row w-100 justify-content-between align-items-center">
-          <div class="col-2">
-            <a href="../../../index.html"><img src="../../img/Logo.svg" alt="Logo" class="navbar-brand img-fluid" /></a>
-          </div>
-  
-          <div class="col">
-            <div class="row justify-content-center">
-              <div class="col-5">
-                <form class="form-inline">
-                  <div class="input-group">
-                    <input class="form-control" type="search" placeholder="Buscar oferta" aria-label="Search" />
-                    <button class="btn btn-outline-success" type="submit">
-                      <i class="bi bi-search text-white"></i>
-                    </button>
-                  </div>
-                </form>
-              </div>
+        <div class="container">
+            <div class="row w-100 justify-content-between align-items-center">
+                <div class="col-2">
+                    <a href="./indexEmpresa.html"><img src="../../img/Logo.svg" alt="Logo"
+                            class="navbar-brand img-fluid" /></a>
+                </div>
+
+                <div class="col">
+                    <div class="row justify-content-center">
+                        <div class="col-5">
+                            <form class="form-inline">
+                                <div class="input-group">
+                                    <input class="form-control" type="search" placeholder="Buscar oferta"
+                                        aria-label="Search" />
+                                    <button class="btn btn-outline-success" type="submit">
+                                        <i class="bi bi-search text-white"></i>
+                                    </button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <ul class="navbar-nav justify-content-evenly fs-3">
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="./indexEmpresa.html">Inicio</a>
+                        </li>
+                        <li class="nav-item"><img class="rounded-pill imgPerfil" src="../../img/Usuarios/Empresas/Empresa01.jpg"
+                                alt="Foto de Perfil"></li>
+                        <li class="nav-item">
+                            <div class="dropdown selectUsuario">
+                                <button type="button" class="btn  dropdown-toggle" data-bs-toggle="dropdown">
+                                    EcoTech
+                                </button>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="./consultarMiPerfilEmpresa.html">Perfil</a></li>
+                                    <li><a class="dropdown-item" href="../../../index.html">Cerrar Sessión</a></li>
+                                </ul>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
             </div>
-          </div>
-          <div class="col-2">
-            <ul class="navbar-nav justify-content-evenly fs-3">
-              <li class="nav-item">
-                <a class="nav-link text-white" href="../../../index.html">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-white" href="../../menu/inicioSession.html">Acceder</a>
-              </li>
-            </ul>
-          </div>
         </div>
-      </div>
     </nav>
   
     <main class="container pt-5">
