--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Postulante/consultaDeTipoDePublicacionDeOfertaLaboral.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Postulante/consultaDeTipoDePublicacionDeOfertaLaboral.html
@@ -17,7 +17,8 @@
       <div class="container">
         <div class="row w-100 justify-content-between align-items-center">
           <div class="col-2">
-            <a href="../../../index.html"><img src="../../img/Logo.svg" alt="Logo" class="navbar-brand img-fluid" /></a>
+            <a href="./indexPostulante.html"><img src="../../img/Logo.svg" alt="Logo"
+                class="navbar-brand img-fluid" /></a>
           </div>
   
           <div class="col">
@@ -34,13 +35,23 @@
               </div>
             </div>
           </div>
-          <div class="col-2">
+          <div class="col-3">
             <ul class="navbar-nav justify-content-evenly fs-3">
               <li class="nav-item">
-                <a class="nav-link text-white" href="../../../index.html">Inicio</a>
+                <a class="nav-link text-white" href="./indexPostulante.html">Inicio</a>
               </li>
+              <li class="nav-item"><img class="rounded-pill imgPerfil" src="../../img/Usuarios/Postulantes/Postulante01.png"
+                  alt="Foto de Perfil"></li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="../../menu/inicioSession.html">Acceder</a>
+                <div class="dropdown selectUsuario">
+                  <button type="button" class="btn  dropdown-toggle" data-bs-toggle="dropdown">
+                    lgarcia
+                  </button>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="./consultarMiPerfilPostulante.html">Perfil</a></li>
+                    <li><a class="dropdown-item" href="../../../index.html">Cerrar Sessión</a></li>
+                  </ul>
+                </div>
               </li>
             </ul>
           </div>
