--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Empresa/oferta.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Empresa/oferta.html
@@ -40,7 +40,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-white" href="./indexEmpresa.html">Inicio</a>
                         </li>
-                        <li class="nav-item"><img class="rounded-pill imgPerfil" src="../../img/ecoTechLogo.png"
+                        <li class="nav-item"><img class="rounded-pill imgPerfil" src="../../img/Usuarios/Empresas/Empresa01.jpg"
                                 alt="Foto de Perfil"></li>
                         <li class="nav-item">
                             <div class="dropdown selectUsuario">
@@ -76,17 +76,17 @@
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td class="d-flex"><a class="btn" href="">Consulta
+                                    <td class="d-flex"><a class="btn" href="./consultaUsuario.html">Consulta
                                             usuarios</a></td>
                                 </tr>
                                 <tr>
-                                    <td class="d-flex"><a class="btn" href="">Ver tipos de publicaciones</a></td>
+                                    <td class="d-flex"><a class="btn" href="./consultaDeTipoDePublicacionDeOfertaLaboral.html">Ver tipos de publicaciones</a></td>
                                 </tr>
                                 <tr>
-                                    <td class="d-flex"><a class="btn" href="">Ver tipos de paquetes</a></td>
+                                    <td class="d-flex"><a class="btn" href="./consultaDePaqueteDeTiposDePublicacionOfertaLaboral.html">Ver tipos de paquetes</a></td>
                                 </tr>
                                 <tr>
-                                    <td class="d-flex"><a class="btn" href="">Consulta ofertas laborales</a></td>
+                                    <td class="d-flex"><a class="btn" href="./consultaOferta.html">Consulta ofertas laborales</a></td>
                                 </tr>
                             </tbody>
                         </table>
@@ -182,7 +182,7 @@
                         <div class="card cardOferta mb-3" >
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="../../img/package-icon-vector.jpg" class="img-fluid rounded-start" alt="...">
+                                    <img src="../../img/Paquete/Basico.jpg" class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -204,14 +204,14 @@
                         <h1>Postulaciones</h1>
                     </div>
                     <div class="card" style="width: 15rem;">
-                        <img src="../../img/img_avatar1.png" class="card-img-top" alt="...">
+                        <img src="../../img/Usuarios/Postulantes/Postulante01.png" class="card-img-top" alt="...">
                         <div class="card-body">
                           <p class="card-text"><a href="">lgarcia</a></p>
                           <a href="#" class="btn btn-primary">Ir a postulacion</a>
                         </div>
                     </div>
                     <div class="card" style="width: 15rem;">
-                        <img src="../../img/img_avatar1.png" class="card-img-top" alt="...">
+                        <img src="../../img/Usuarios/Postulantes/Postulante01.png" class="card-img-top" alt="...">
                         <div class="card-body">
                           <p class="card-text"><a href="">maro</a></p>
                           <a href="#" class="btn btn-primary">Ir a postulacion</a>
