--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/TipoPublicacion.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/TipoPublicacion.html
@@ -159,69 +159,26 @@
         <div class="col-9 d-flex flex-column align-items-center flex-grow-1">
           <div class="card mb-3" style="max-width: 540px">
             <div class="row g-0">
-              <div class="col-4 d-flex align-items-center">
-                <img
-                  src="../img/Paquete/Basico.jpg"
-                  class="img-fluid rounded-start"
-                  alt="..."
-                />
-              </div>
-              <div class="col-8">
+              <div class="col">
                 <div class="card-body">
                   <div class="card-header bg-white px-0">
-                    <h1 class="m-0 fs-2">
-                      <i class="bi bi-box-seam text-primary"></i> Paquete Básico
-                    </h1>
+                    <h1 class="m-0 fs-2">Tipo Publicacion Premium</h1>
                   </div>
                   <p class="card-text py-2 fst-italic">
-                    Publica ofertas laborales en nuestra plataforma por un
-                    período de 30 días
+                    Obtén máxima visibilidad
                   </p>
                   <ul class="list-unstyled">
                     <li class="text-secondary">
                       <i class="bi bi-arrow-right-circle text-primary"></i>
-                      Período: 30 días
+                      Exposición: 1
                     </li>
                     <li class="text-secondary">
                       <i class="bi bi-arrow-right-circle text-primary"></i>
-                      Descuento del 20% por publicación
-                    </li>
-                    <li class="text-secondary">
-                      <i class="bi bi-arrow-right-circle text-primary"></i>
-                      Fecha 16/08/23
+                      Duración: 30 días
                     </li>
                   </ul>
-                  <div class="publicacionesPaquete">
-                    <table class="table borden border-0">
-                      <thead>
-                        <tr>
-                          <th scope="col">Tipo Publicaciones</th>
-                          <th scope="col">Cant.</th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <tr>
-                          <td><a href="./TipoPublicacion.html">Premium</a></td>
-                          <td>1</td>
-                        </tr>
-                        <tr>
-                          <td>
-                            <a href="./TipoPublicacion.html">Destacada</a>
-                          </td>
-                          <td>1</td>
-                        </tr>
-                        <tr>
-                          <td><a href="./TipoPublicacion.html">Estandar</a></td>
-                          <td>1</td>
-                        </tr>
-                      </tbody>
-                    </table>
-                  </div>
-                  <div
-                    class="d-flex justify-content-between align-items-center"
-                  >
-                    <h2 class="">$240</h2>
-                    <a href="" class="btn btn-primary">Comprar</a>
+                  <div class="text-start">
+                    <h2 class="">$4000 <sub>/Oferta laboral</sub></h2>
                   </div>
                 </div>
               </div>
