--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Postulante/consultaDePaqueteDeTiposDePublicacionDeOfertaLaboral.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Postulante/consultaDePaqueteDeTiposDePublicacionDeOfertaLaboral.html
@@ -3,62 +3,102 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
+      crossorigin="anonymous"
+    />
     <link rel="icon" type="image/x-icon" href="../../img/Logo.svg" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css"
+    />
     <link rel="stylesheet" href="../../css/general.css" />
-    <link rel="stylesheet" href="../../css/consultaDePaqueteDeTiposDePublicacionDeOfertaLaborl.css" />
+    <link
+      rel="stylesheet"
+      href="../../css/consultaDePaqueteDeTiposDePublicacionDeOfertaLaborl.css"
+    />
     <title>Trabajo.uy</title>
   </head>
-  
+
   <body>
     <nav class="navbar navbar-expand-lg">
-        <div class="container">
-          <div class="row w-100 justify-content-between align-items-center">
-            <div class="col-2">
-              <a href="./indexPostulante.html"><img src="../../img/Logo.svg" alt="Logo"
-                  class="navbar-brand img-fluid" /></a>
-            </div>
-    
-            <div class="col">
-              <div class="row justify-content-center">
-                <div class="col-5">
-                  <form class="form-inline">
-                    <div class="input-group">
-                      <input class="form-control" type="search" placeholder="Buscar oferta" aria-label="Search" />
-                      <button class="btn btn-outline-success" type="submit">
-                        <i class="bi bi-search text-white"></i>
-                      </button>
-                    </div>
-                  </form>
-                </div>
+      <div class="container">
+        <div class="row w-100 justify-content-between align-items-center">
+          <div class="col-2">
+            <a href="./indexPostulante.html"
+              ><img
+                src="../../img/Logo.svg"
+                alt="Logo"
+                class="navbar-brand img-fluid"
+            /></a>
+          </div>
+
+          <div class="col">
+            <div class="row justify-content-center">
+              <div class="col-5">
+                <form class="form-inline">
+                  <div class="input-group">
+                    <input
+                      class="form-control"
+                      type="search"
+                      placeholder="Buscar oferta"
+                      aria-label="Search"
+                    />
+                    <button class="btn btn-outline-success" type="submit">
+                      <i class="bi bi-search text-white"></i>
+                    </button>
+                  </div>
+                </form>
               </div>
             </div>
-            <div class="col-3">
-              <ul class="navbar-nav justify-content-evenly fs-3">
-                <li class="nav-item">
-                  <a class="nav-link text-white" href="./indexPostulante.html">Inicio</a>
-                </li>
-                <li class="nav-item"><img class="rounded-pill imgPerfil" src="../../img/Usuarios/Postulantes/Postulante01.png"
-                    alt="Foto de Perfil"></li>
-                <li class="nav-item">
-                  <div class="dropdown selectUsuario">
-                    <button type="button" class="btn  dropdown-toggle" data-bs-toggle="dropdown">
-                      lgarcia
-                    </button>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="./consultarMiPerfilPostulante.html">Perfil</a></li>
-                      <li><a class="dropdown-item" href="../../../index.html">Cerrar Sessión</a></li>
-                    </ul>
-                  </div>
-                </li>
-              </ul>
-            </div>
+          </div>
+          <div class="col-3">
+            <ul class="navbar-nav justify-content-evenly fs-3">
+              <li class="nav-item">
+                <a class="nav-link text-white" href="./indexPostulante.html"
+                  >Inicio</a
+                >
+              </li>
+              <li class="nav-item">
+                <img
+                  class="rounded-pill imgPerfil"
+                  src="../../img/Usuarios/Postulantes/Postulante01.png"
+                  alt="Foto de Perfil"
+                />
+              </li>
+              <li class="nav-item">
+                <div class="dropdown selectUsuario">
+                  <button
+                    type="button"
+                    class="btn dropdown-toggle"
+                    data-bs-toggle="dropdown"
+                  >
+                    lgarcia
+                  </button>
+                  <ul class="dropdown-menu">
+                    <li>
+                      <a
+                        class="dropdown-item"
+                        href="./consultarMiPerfilPostulante.html"
+                        >Perfil</a
+                      >
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="../../../index.html"
+                        >Cerrar Sessión</a
+                      >
+                    </li>
+                  </ul>
+                </div>
+              </li>
+            </ul>
           </div>
         </div>
-      </nav>
-  
+      </div>
+    </nav>
+
     <main class="container pt-5">
       <div class="row">
         <div class="col-3">
@@ -72,16 +112,36 @@
                 </thead>
                 <tbody>
                   <tr>
-                    <td class="d-flex"><a class="btn" href="./consultaUsuario.html">Consulta usuarios</a></td>
+                    <td class="d-flex">
+                      <a class="btn" href="./consultaUsuario.html"
+                        >Consulta usuarios</a
+                      >
+                    </td>
                   </tr>
                   <tr>
-                    <td class="d-flex"><a class="btn" href="./consultaDeTipoDePublicacionDeOfertaLaboral.html">Ver tipos de publicaciones</a></td>
+                    <td class="d-flex">
+                      <a
+                        class="btn"
+                        href="./consultaDeTipoDePublicacionDeOfertaLaboral.html"
+                        >Ver tipos de publicaciones</a
+                      >
+                    </td>
                   </tr>
                   <tr>
-                    <td class="d-flex"><a class="btn" href="./consultaDePaqueteDeTiposDePublicacionDeOfertaLaboral.html">Ver tipos de paquetes</a></td>
+                    <td class="d-flex">
+                      <a
+                        class="btn"
+                        href="./consultaDePaqueteDeTiposDePublicacionDeOfertaLaboral.html"
+                        >Ver tipos de paquetes</a
+                      >
+                    </td>
                   </tr>
                   <tr>
-                    <td class="d-flex"><a class="btn" href="./consultaOferta.html">Consulta ofertas laborales</a></td>
+                    <td class="d-flex">
+                      <a class="btn" href="./consultaOferta.html"
+                        >Consulta ofertas laborales</a
+                      >
+                    </td>
                   </tr>
                 </tbody>
               </table>
@@ -139,33 +199,32 @@
             </div>
           </section>
         </div>
-      <div class="mainCenter col-8">
-        <section class="consultaPaqueteTipoPublicacion">
-          <div class="paqueteTipoPublicacion">
-            <img
-              class="imgOfertas"
-              src="../../img/Paquete/Basico.jpg"
-              alt="Oferta Desarrollo Frontend"
-            />
+        <div class="mainCenter col-8">
+          <section class="consultaPaqueteTipoPublicacion">
+            <div class="paqueteTipoPublicacion">
+              <img
+                class="imgOfertas"
+                src="../../img/Paquete/Basico.jpg"
+                alt="Oferta Desarrollo Frontend"
+              />
 
-            <p class="paqueteTipoPublicacionDatosView">
-              <strong>Tipo:</strong> Basico
-              <br />
-              <strong>Descripción:</strong>
-              Publica ofertas laborales en nuestra plataforma por un periodo de 30 dias.
-              <br />
-              <strong>Costo:</strong> $<span id="costo">240</span>
-              <br />
-              <br />
-              <a href="./Paquete.html">Mas Info</a>
-            </p>
-          </div>
-          </div>
-        </section>
+              <p class="paqueteTipoPublicacionDatosView">
+                <strong>Tipo:</strong> Basico
+                <br />
+                <strong>Descripción:</strong>
+                Publica ofertas laborales en nuestra plataforma por un periodo
+                de 30 dias.
+                <br />
+                <strong>Costo:</strong> $<span id="costo">240</span>
+                <br />
+                <br />
+                <a href="./Paquete.html">Mas Info</a>
+              </p>
+            </div>
+          </section>
+        </div>
       </div>
     </main>
-
-    <footer></footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
