--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Visitante/consultaDeTipoDePublicacionDeOfertaLaboral.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Visitante/consultaDeTipoDePublicacionDeOfertaLaboral.html
@@ -3,29 +3,49 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
+      crossorigin="anonymous"
+    />
     <link rel="icon" type="image/x-icon" href="../../img/Icon_Logo.svg" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css"
+    />
     <link rel="stylesheet" href="../../css/general.css" />
-    <link rel="stylesheet" href="../../css/consultaDeTiposDePublicacionDeOfertaLaboral.css" />
+    <link
+      rel="stylesheet"
+      href="../../css/consultaDeTiposDePublicacionDeOfertaLaboral.css"
+    />
     <title>Trabajo.uy</title>
   </head>
-  
+
   <body>
     <nav class="navbar navbar-expand-lg">
       <div class="container">
         <div class="row w-100 justify-content-between align-items-center">
           <div class="col-2">
-            <a href="../../../index.html"><img src="../../img/Logo.svg" alt="Logo" class="navbar-brand img-fluid" /></a>
+            <a href="../../../index.html"
+              ><img
+                src="../../img/Logo.svg"
+                alt="Logo"
+                class="navbar-brand img-fluid"
+            /></a>
           </div>
-  
+
           <div class="col">
             <div class="row justify-content-center">
               <div class="col-5">
                 <form class="form-inline">
                   <div class="input-group">
-                    <input class="form-control" type="search" placeholder="Buscar oferta" aria-label="Search" />
+                    <input
+                      class="form-control"
+                      type="search"
+                      placeholder="Buscar oferta"
+                      aria-label="Search"
+                    />
                     <button class="btn btn-outline-success" type="submit">
                       <i class="bi bi-search text-white"></i>
                     </button>
@@ -37,17 +57,23 @@
           <div class="col-2">
             <ul class="navbar-nav justify-content-evenly fs-3">
               <li class="nav-item">
-                <a class="nav-link text-white" href="../../../index.html">Inicio</a>
+                <a class="nav-link text-white" href="../../../index.html"
+                  >Inicio</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="../../menu/inicioSession.html">Acceder</a>
+                <a
+                  class="nav-link text-white"
+                  href="../../menu/inicioSession.html"
+                  >Acceder</a
+                >
               </li>
             </ul>
           </div>
         </div>
       </div>
     </nav>
-  
+
     <main class="container pt-5">
       <div class="row">
         <div class="col-3">
@@ -61,16 +87,36 @@
                 </thead>
                 <tbody>
                   <tr>
-                    <td class="d-flex"><a class="btn" href="./consultaUsuario.html">Consulta usuarios</a></td>
+                    <td class="d-flex">
+                      <a class="btn" href="./consultaUsuario.html"
+                        >Consulta usuarios</a
+                      >
+                    </td>
                   </tr>
                   <tr>
-                    <td class="d-flex"><a class="btn" href="./consultaDeTipoDePublicacionDeOfertaLaboral.html">Ver tipos de publicaciones</a></td>
+                    <td class="d-flex">
+                      <a
+                        class="btn"
+                        href="./consultaDeTipoDePublicacionDeOfertaLaboral.html"
+                        >Ver tipos de publicaciones</a
+                      >
+                    </td>
                   </tr>
                   <tr>
-                    <td class="d-flex"><a class="btn" href="./consultaDePaqueteDeTiposDePublicacionDeOfertaLaboral.html">Ver tipos de paquetes</a></td>
+                    <td class="d-flex">
+                      <a
+                        class="btn"
+                        href="./consultaDePaqueteDeTiposDePublicacionDeOfertaLaboral.html"
+                        >Ver tipos de paquetes</a
+                      >
+                    </td>
                   </tr>
                   <tr>
-                    <td class="d-flex"><a class="btn" href="./consultaOferta.html">Consulta ofertas laborales</a></td>
+                    <td class="d-flex">
+                      <a class="btn" href="./consultaOferta.html"
+                        >Consulta ofertas laborales</a
+                      >
+                    </td>
                   </tr>
                 </tbody>
               </table>
@@ -131,7 +177,6 @@
         <div class="mainCenter col-8">
           <section class="consultaTipoPublicacion">
             <div class="paqueteTipoPublicacion">
-  
               <p class="paqueteTipoPublicacionDatosView">
                 <strong>Tipo:</strong> Premium
                 <br />
@@ -142,9 +187,8 @@
                 <a href="./tipoPublicacion.html">Mas Info</a>
               </p>
             </div>
-  
+
             <div class="paqueteTipoPublicacion">
-  
               <p class="paqueteTipoPublicacionDatosView">
                 <strong>Tipo:</strong> Destacada
                 <br />
@@ -155,9 +199,8 @@
                 <a href="./tipoPublicacion.html">Mas Info</a>
               </p>
             </div>
-  
+
             <div class="paqueteTipoPublicacion">
-  
               <p class="paqueteTipoPublicacionDatosView">
                 <strong>Tipo:</strong> Estandar
                 <br />
@@ -168,9 +211,8 @@
                 <a href="./tipoPublicacion.html">Mas Info</a>
               </p>
             </div>
-  
+
             <div class="paqueteTipoPublicacion">
-  
               <p class="paqueteTipoPublicacionDatosView">
                 <strong>Tipo:</strong> Basica
                 <br />
@@ -183,9 +225,8 @@
             </div>
           </section>
         </div>
-      </main>
-
-    <footer></footer>
+      </div>
+    </main>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
