--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Empresa/consultaUsuario.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Empresa/consultaUsuario.html
@@ -42,7 +42,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-white" href="./indexEmpresa.html">Inicio</a>
                         </li>
-                        <li class="nav-item"><img class="rounded-pill imgPerfil" src="../../img/ecoTechLogo.png"
+                        <li class="nav-item"><img class="rounded-pill imgPerfil" src="../../img/Usuarios/Empresas/Empresa01.jpg"
                                 alt="Foto de Perfil"></li>
                         <li class="nav-item">
                             <div class="dropdown selectUsuario">
