--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Empresa/consultarMiPerfilEmpresa.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Empresa/consultarMiPerfilEmpresa.html
@@ -46,7 +46,7 @@
                     <li class="nav-item">
                         <a class="nav-link text-white" href="./indexEmpresa.html">Inicio</a>
                     </li>
-                    <li class="nav-item"><img class="rounded-pill imgPerfil" src="../../img/ecoTechLogo.png"
+                    <li class="nav-item"><img class="rounded-pill imgPerfil" src="../../img/Usuarios/Empresas/Empresa01.jpg"
                             alt="Foto de Perfil"></li>
                     <li class="nav-item">
                         <div class="dropdown selectUsuario">
@@ -154,7 +154,7 @@
     <section class="col-8">
       <div class="row">
       <div class="col-4">
-        <img class="fotoDePerfil" src="../../img/ecoTechLogo.png" alt="Foto de Perfil" />
+        <img class="fotoDePerfil" src="../../img/Usuarios/Empresas/Empresa01.jpg" alt="Foto de Perfil" />
       </div>
         <div class="col-8">
           <h2 class="mb-3">Sophia Johnson</h2>
