--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Empresa/consultaDeTipoDePublicacionDeOfertaLaboral.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Empresa/consultaDeTipoDePublicacionDeOfertaLaboral.html
@@ -209,7 +209,7 @@
                 Obtener maxima visibilidad.
                 <br />
                 <br />
-                <a href="./tipoPublicacion.html">Mas Info</a>
+                <a href="../TipoPublicacion.html">Mas Info</a>
               </p>
             </div>
 
@@ -221,7 +221,7 @@
                 Destaca tu anuncio.
                 <br />
                 <br />
-                <a href="./tipoPublicacion.html">Mas Info</a>
+                <a href="../TipoPublicacion.html">Mas Info</a>
               </p>
             </div>
 
@@ -233,7 +233,7 @@
                 Mejora la posicion de tu anuncio.
                 <br />
                 <br />
-                <a href="./tipoPublicacion.html">Mas Info</a>
+                <a href="../TipoPublicacion.html">Mas Info</a>
               </p>
             </div>
 
@@ -245,7 +245,7 @@
                 Publica de forma sencilla en la lista de ofertas.
                 <br />
                 <br />
-                <a href="./tipoPublicacion.html">Mas Info</a>
+                <a href="../TipoPublicacion.html">Mas Info</a>
               </p>
             </div>
           </section>
