--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Visitante/consultaDeTipoDePublicacionDeOfertaLaboral.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Visitante/consultaDeTipoDePublicacionDeOfertaLaboral.html
@@ -184,7 +184,7 @@
                 Obtener maxima visibilidad.
                 <br />
                 <br />
-                <a href="./tipoPublicacion.html">Mas Info</a>
+                <a href="../TipoPublicacion.html">Mas Info</a>
               </p>
             </div>
 
@@ -196,7 +196,7 @@
                 Destaca tu anuncio.
                 <br />
                 <br />
-                <a href="./tipoPublicacion.html">Mas Info</a>
+                <a href="../TipoPublicacion.html">Mas Info</a>
               </p>
             </div>
 
@@ -208,7 +208,7 @@
                 Mejora la posicion de tu anuncio.
                 <br />
                 <br />
-                <a href="./tipoPublicacion.html">Mas Info</a>
+                <a href="../TipoPublicacion.html">Mas Info</a>
               </p>
             </div>
 
@@ -220,7 +220,7 @@
                 Publica de forma sencilla en la lista de ofertas.
                 <br />
                 <br />
-                <a href="./tipoPublicacion.html">Mas Info</a>
+                <a href="../TipoPublicacion.html">Mas Info</a>
               </p>
             </div>
           </section>
