--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Postulante/consultaUsuario.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Postulante/consultaUsuario.html
@@ -61,7 +61,7 @@
               <li class="nav-item">
                 <img
                   class="rounded-pill imgPerfil"
-                  src="../../img/ecoTechLogo.png"
+                  src="../../img/Usuarios/Postulantes/Postulante01.png"
                   alt="Foto de Perfil"
                 />
               </li>
@@ -135,7 +135,9 @@
                   </tr>
                   <tr>
                     <td class="d-flex">
-                      <a class="btn" href="./consultaOfertaLaboral.html"
+                      <a
+                        class="btn"
+                        href="../consultaOfertaLaboralPostulante.html"
                         >Consulta ofertas laborales</a
                       >
                     </td>
