--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Postulante/Paquete.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Postulante/Paquete.html
@@ -22,9 +22,9 @@
       <div class="container">
         <div class="row w-100 justify-content-between align-items-center">
           <div class="col-2">
-            <a href="../../index.html"
+            <a href="./indexPostulante.html"
               ><img
-                src="../img/Logo.svg"
+                src="../../img/Logo.svg"
                 alt="Logo"
                 class="navbar-brand img-fluid"
             /></a>
@@ -49,17 +49,44 @@
               </div>
             </div>
           </div>
-          <div class="col-2">
+          <div class="col-3">
             <ul class="navbar-nav justify-content-evenly fs-3">
               <li class="nav-item">
-                <a class="nav-link text-white" href="./index.html">Inicio</a>
+                <a class="nav-link text-white" href="./indexPostulante.html"
+                  >Inicio</a
+                >
               </li>
               <li class="nav-item">
-                <a
-                  class="nav-link text-white"
-                  href="./recourse/menu/consultarMiPerfilEmpresa.html"
-                  >Perfil</a
-                >
+                <img
+                  class="rounded-pill imgPerfil"
+                  src="../../img/Usuarios/Postulantes/Postulante01.png"
+                  alt="Foto de Perfil"
+                />
+              </li>
+              <li class="nav-item">
+                <div class="dropdown selectUsuario">
+                  <button
+                    type="button"
+                    class="btn dropdown-toggle"
+                    data-bs-toggle="dropdown"
+                  >
+                    lgarcia
+                  </button>
+                  <ul class="dropdown-menu">
+                    <li>
+                      <a
+                        class="dropdown-item"
+                        href="./consultarMiPerfilPostulante.html"
+                        >Perfil</a
+                      >
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="../../../index.html"
+                        >Cerrar Sessión</a
+                      >
+                    </li>
+                  </ul>
+                </div>
               </li>
             </ul>
           </div>
@@ -80,24 +107,36 @@
                 <tbody>
                   <tr>
                     <td class="d-flex">
-                      <a class="btn" href="./recourse/menu/consultaUsuario.html"
+                      <a class="btn" href="./consultaUsuario.html"
                         >Consulta usuarios</a
                       >
                     </td>
                   </tr>
                   <tr>
                     <td class="d-flex">
-                      <a class="btn" href="">Ver tipos de publicaciones</a>
+                      <a
+                        class="btn"
+                        href="./consultaDeTipoDePublicacionDeOfertaLaboral.html"
+                        >Ver tipos de publicaciones</a
+                      >
                     </td>
                   </tr>
                   <tr>
                     <td class="d-flex">
-                      <a class="btn" href="">Ver tipos de paquetes</a>
+                      <a
+                        class="btn"
+                        href="./consultaDePaqueteDeTiposDePublicacionDeOfertaLaboral.html"
+                        >Ver tipos de paquetes</a
+                      >
                     </td>
                   </tr>
                   <tr>
                     <td class="d-flex">
-                      <a class="btn" href="">Consulta ofertas laborales</a>
+                      <a
+                        class="btn"
+                        href="../consultaOfertaLaboralPostulante.html"
+                        >Consulta ofertas laborales</a
+                      >
                     </td>
                   </tr>
                 </tbody>
