--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Postulante/TipoPublicacion.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Postulante/TipoPublicacion.html
@@ -22,9 +22,9 @@
       <div class="container">
         <div class="row w-100 justify-content-between align-items-center">
           <div class="col-2">
-            <a href="../../index.html"
+            <a href="./indexPostulante.html"
               ><img
-                src="../img/Logo.svg"
+                src="../../img/Logo.svg"
                 alt="Logo"
                 class="navbar-brand img-fluid"
             /></a>
@@ -49,17 +49,44 @@
               </div>
             </div>
           </div>
-          <div class="col-2">
+          <div class="col-3">
             <ul class="navbar-nav justify-content-evenly fs-3">
               <li class="nav-item">
-                <a class="nav-link text-white" href="./index.html">Inicio</a>
+                <a class="nav-link text-white" href="./indexPostulante.html"
+                  >Inicio</a
+                >
               </li>
               <li class="nav-item">
-                <a
-                  class="nav-link text-white"
-                  href="./recourse/menu/consultarMiPerfilEmpresa.html"
-                  >Perfil</a
-                >
+                <img
+                  class="rounded-pill imgPerfil"
+                  src="../../img/Usuarios/Postulantes/Postulante01.png"
+                  alt="Foto de Perfil"
+                />
+              </li>
+              <li class="nav-item">
+                <div class="dropdown selectUsuario">
+                  <button
+                    type="button"
+                    class="btn dropdown-toggle"
+                    data-bs-toggle="dropdown"
+                  >
+                    lgarcia
+                  </button>
+                  <ul class="dropdown-menu">
+                    <li>
+                      <a
+                        class="dropdown-item"
+                        href="./consultarMiPerfilPostulante.html"
+                        >Perfil</a
+                      >
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="../../../index.html"
+                        >Cerrar Sessión</a
+                      >
+                    </li>
+                  </ul>
+                </div>
               </li>
             </ul>
           </div>
@@ -80,24 +107,36 @@
                 <tbody>
                   <tr>
                     <td class="d-flex">
-                      <a class="btn" href="./recourse/menu/consultaUsuario.html"
+                      <a class="btn" href="./consultaUsuario.html"
                         >Consulta usuarios</a
                       >
                     </td>
                   </tr>
                   <tr>
                     <td class="d-flex">
-                      <a class="btn" href="">Ver tipos de publicaciones</a>
+                      <a
+                        class="btn"
+                        href="./consultaDeTipoDePublicacionDeOfertaLaboral.html"
+                        >Ver tipos de publicaciones</a
+                      >
                     </td>
                   </tr>
                   <tr>
                     <td class="d-flex">
-                      <a class="btn" href="">Ver tipos de paquetes</a>
+                      <a
+                        class="btn"
+                        href="./consultaDePaqueteDeTiposDePublicacionDeOfertaLaboral.html"
+                        >Ver tipos de paquetes</a
+                      >
                     </td>
                   </tr>
                   <tr>
                     <td class="d-flex">
-                      <a class="btn" href="">Consulta ofertas laborales</a>
+                      <a
+                        class="btn"
+                        href="../consultaOfertaLaboralPostulante.html"
+                        >Consulta ofertas laborales</a
+                      >
                     </td>
                   </tr>
                 </tbody>
@@ -159,68 +198,26 @@
         <div class="col-9 d-flex flex-column align-items-center flex-grow-1">
           <div class="card mb-3" style="max-width: 540px">
             <div class="row g-0">
-              <div class="col-4 d-flex align-items-center">
-                <img
-                  src="../img/Paquete/Basico.jpg"
-                  class="img-fluid rounded-start"
-                  alt="..."
-                />
-              </div>
-              <div class="col-8">
+              <div class="col">
                 <div class="card-body">
                   <div class="card-header bg-white px-0">
-                    <h1 class="m-0 fs-2">
-                      <i class="bi bi-box-seam text-primary"></i> Paquete Básico
-                    </h1>
+                    <h1 class="m-0 fs-2">Tipo Publicacion Premium</h1>
                   </div>
                   <p class="card-text py-2 fst-italic">
-                    Publica ofertas laborales en nuestra plataforma por un
-                    período de 30 días
+                    Obtén máxima visibilidad
                   </p>
                   <ul class="list-unstyled">
                     <li class="text-secondary">
                       <i class="bi bi-arrow-right-circle text-primary"></i>
-                      Período: 30 días
+                      Exposición: 1
                     </li>
                     <li class="text-secondary">
                       <i class="bi bi-arrow-right-circle text-primary"></i>
-                      Descuento del 20% por publicación
-                    </li>
-                    <li class="text-secondary">
-                      <i class="bi bi-arrow-right-circle text-primary"></i>
-                      Fecha 16/08/23
+                      Duración: 30 días
                     </li>
                   </ul>
-                  <div class="publicacionesPaquete">
-                    <table class="table borden border-0">
-                      <thead>
-                        <tr>
-                          <th scope="col">Tipo Publicaciones</th>
-                          <th scope="col">Cant.</th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <tr>
-                          <td><a href="./TipoPublicacion.html">Premium</a></td>
-                          <td>1</td>
-                        </tr>
-                        <tr>
-                          <td>
-                            <a href="./TipoPublicacion.html">Destacada</a>
-                          </td>
-                          <td>1</td>
-                        </tr>
-                        <tr>
-                          <td><a href="./TipoPublicacion.html">Estandar</a></td>
-                          <td>1</td>
-                        </tr>
-                      </tbody>
-                    </table>
-                  </div>
-                  <div
-                    class="d-flex justify-content-between align-items-center"
-                  >
-                    <h2 class="">$240</h2>
+                  <div class="text-start">
+                    <h2 class="">$4000 <sub>/Oferta laboral</sub></h2>
                   </div>
                 </div>
               </div>
